added circlci and updated swagger
