# docs/swagger.json
@@ -3,7 +3,6 @@
     "info": {
         "contact": {}
     },
-    "basePath": "/",
     "paths": {
         "/ping": {
             "get": {
@@ -20,9 +19,9 @@
                 "summary": "ping example",
                 "responses": {
                     "200": {
-                        "description": "message\":\"pong\"}",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.Message"
                         }
                     }
                 }
@@ -58,6 +57,100 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "description": "create a single user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user create post"
+                ],
+                "summary": "create user",
+                "parameters": [
+                    {
+                        "description": "Update User",
+                        "name": "ReqUpdateUser",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ReqUpdateUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User updated successfully",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Message"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "create a single user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user create post"
+                ],
+                "summary": "create user",
+                "parameters": [
+                    {
+                        "description": "New User",
+                        "name": "ReqNewUser",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ReqNewUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "delete a single user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user delete"
+                ],
+                "summary": "delete a single user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User deleted successfully",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Message"
+                        }
+                    }
+                }
             }
         },
         "/users": {
@@ -85,6 +178,52 @@
         }
     },
     "definitions": {
+        "controllers.ReqNewUser": {
+            "type": "object",
+            "required": [
+                "email",
+                "mobile",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "mobile": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.ReqUpdateUser": {
+            "type": "object",
+            "required": [
+                "email",
+                "mobile",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "mobile": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -113,6 +252,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.Message": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
